create all for frontend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/RoyalHouse
-spring.datasource.username=Latcarf
+spring.datasource.username=postgres
 spring.datasource.password=X9Fe53v2uD
 
 spring.jpa.hibernate.ddl-auto=update
-
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
