Changing the entire CSS structure. Adding a New Building page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,29 @@
+# Datasource Configuration
 spring.datasource.url=
 spring.datasource.username=
 spring.datasource.password=
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+
+# Mail Configuration
+spring.mail.host=
+spring.mail.port=
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=
+spring.mail.properties.mail.smtp.starttls.enable=
+
+# OAuth2 Configuration (Google)
+spring.security.oauth2.client.registration.google.client-id=
+spring.security.oauth2.client.registration.google.client-secret=
+spring.security.oauth2.client.registration.google.scope=
+spring.security.oauth2.client.registration.google.redirect-uri=
+
+# File Upload Configuration
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+
+# Custom Application Properties
+photo.storage.path=src/main/resources/static/images
